--- a/frontend/src/app/pages/dashboard/dashboard.component.scss
+++ b/frontend/src/app/pages/dashboard/dashboard.component.scss
@@ -211,6 +211,7 @@
 }
 
 .dash__tile {
+  display: flex;
   text-decoration: none;
   color: inherit;
 }
